--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
