--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
