--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
