--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -13,6 +13,7 @@
     "file-saver": "^2.0.5",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
