--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
+    "sharp": "^0.33.3",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
