--- a/registration-app/package.json
+++ b/registration-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "file-saver": "^2.0.5",
